--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: build
-        run: npm run build:github
+        run: npm run docs:build
         
       - name: pre deploy
         run: |
