chore: update package scripts

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "> super customizable, neofetch inspired tool to display github user stats",
   "main": "index.js",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "serve": "vitepress serve docs"
   },
   "repository": {
     "type": "git",
